--- a/Includes/results/effectparticle.tex
+++ b/Includes/results/effectparticle.tex
@@ -1,4 +1,4 @@
-\section{The effect of particle dynamics model}
+\subsection{The effect of particle dynamics model}
 
 \begin{figure}[H]
 	\centering
