--- a/Includes/results/pfr.tex
+++ b/Includes/results/pfr.tex
@@ -1,5 +1,5 @@
-\section{Ethylene pyrolysis in a flow reactor}
-The PFR model was used to simulate the pyrolysis of \%0.6 $\mathrm{C_2H_4-N_2}$ in a flow reactor 1.4 m long and 16 mm in diameter. The temperature profile was imposed in the model from the measurement along the reactor centerline by~\citet{mei2019quantitative} for the maximum temperature of 1700 K. The inception models were calibrated using the inception and PAH adsorption scaling factors to match the predicted PSD with measurements at the volumetric flow rates, Q of 8.5, 11 and 12 L/min.
+\subsubsection{Ethylene pyrolysis in a flow reactor}
+The PFR model was used to simulate the pyrolysis of \%0.6 $\mathrm{C_2H_4-N_2}$ in a flow reactor 1.4 m long and 16 mm in diameter. The temperature profile was imposed in the model from the measurement along the reactor centerline by~\citet{mei2019quantitative} for the maximum temperature of 1700 K. The inception and PAH adsorption scaling factors were used to match the predicted PSD with measurements at the volumetric flow rates, Q of 8.5, 11 and 12 L/min.
 
 \begin{figure}[H]
 	\centering
