--- a/main.tex
+++ b/main.tex
@@ -10,11 +10,9 @@
 % ------------------------------------------------------------ %
 \input{Includes/introduction}
 \input{Includes/theory}
-\input{Includes/results/validation}
-\input{Includes/results/psr}
-\input{Includes/results/pfr}
-\input{Includes/results/shocktube}
-\input{Includes/results/effectparticle}
+\input{Includes/validation}
+\input{Includes/results/results}
+\input{Includes/conclusion}
 % ------------------------------------------------------------ %
 \clearpage
 \bibliography{Includes/Bibliography/all.bib}
