--- a/Includes/results/psr.tex
+++ b/Includes/results/psr.tex
@@ -1,6 +1,6 @@
-\section{Ethylene oxidation in a partially-stirred reactor}
+\subsection{Ethylene oxidation in a partially-stirred reactor}
 
-\citet{manzello2007soot} utilized NIST well-stirred reactor (WSR) connected to a flow reactor to study soot formation during ethylene oxidation at equivalence ratios of 1.9, 2.0, and 2.1, and provided PSD measurements at the end of flow reactor using nano-differential mobility analyzer (Nano-DMA). The WSR has the same size of the reactor used by \citet{manzello2007soot} and explained in Sec.\ref{sec:psrvalid}. The flow reactor is 70 cm long with an inner diameter of 5.1 cm. A coupled PSR-PFR reactor model of omnisoot was used with the same dimensions to study gas chemistry and soot inception during the combustion and flow evolution in the device. The nominal residence time, $\tau$ of flow in the PSR is 11 ms~\citet{manzello2007soot}. The reactants are assumed to enter PSR at 300 K with an inlet mass flow rate, $\dot{m}_{in}=\rho V / \tau$ where $\rho$ was calculated at reactor temperature of 1723 K suggested by~\citet{lenhert2009effects}. The PFR is assumed to be adiabatic. The calculated average axial velocity in the PFR is 14.5 m/s close to the values suggested by~\citet{manzello2007soot}. KAUST mechanism was used The inception and PAH adsorption scaling factors were varied to match the PSD predicted by each inception model with the measurements at different $\phi$s.
+\citet{manzello2007soot} utilized NIST well-stirred reactor (WSR) connected to a flow reactor to study soot formation during ethylene oxidation at equivalence ratios of 1.9, 2.0, and 2.1, and provided PSD measurements at the end of flow reactor using nano-differential mobility analyzer (Nano-DMA). The WSR has the same size of the reactor used by \citet{manzello2007soot} and explained in Sec.\ref{sec:psrvalid}. The flow reactor is 70 cm long with an inner diameter of 5.1 cm. A coupled PSR-PFR reactor model of omnisoot was used with the same dimensions to study gas chemistry and soot inception during the combustion and flow evolution in the device. The nominal residence time, $\tau$ of flow in the PSR is 11 ms~\citet{manzello2007soot}. The reactants are assumed to enter PSR at 300 K with an inlet mass flow rate, $\dot{m}_{in}=\rho V / \tau$ where $\rho$ was calculated at reactor temperature of 1723 K suggested by~\citet{lenhert2009effects}. The PFR is assumed to be adiabatic. The calculated average axial velocity in the PFR is 14.5 m/s close to the values suggested by~\citet{manzello2007soot}. KAUST mechanism was used to describe gas chemistry. A single set of inception and PAH adsorption scaling factors were employed for each PAH growth model to match, as closely as possible, the predicted PSD with the measurements across three $\phi$s. As shown in Fig.\ref{fig:psrpfr_psd}, all inception model capture the peak number concentration and the uni-modal shape of the PSD, which indicates that particle inception has ceased, and coagulation has become dominant.  As reported in Table~\ref{tab:psrpfr_morpcomp}, the geometric mean mobility diameter, $d_{m,g}$ and the geometric mobility standard deviation, $\sigma_{m,g}$ obtained using all inception models are in good agreement with the values calculated from the measured PSD~\citep{manzello2007soot}. As it can be seen in Fig.\ref{fig:psrpfr_psd}-(a) \& (b), the spread of predicted PSD is narrower than that of measurements for $\phi$=1.9 and 2.1, which corresponds to under-prediction of $\sigma_{m,g}$ for these equivalence ratios.
 
 \begin{figure}[H]
 	\centering
@@ -13,6 +13,23 @@
 	\caption{The particle size distribution at the end of PFR for $\phi$=1.9 (a), 2.0 (b), and 2.1 (c) obtained using KAUST mechanism and different inception models calibrated to match the predictions with measurement~\citep{manzello2007soot}.}
 	\label{fig:psrpfr_psd} 
 \end{figure}
+
+
+\begin{table}[H]
+	\centering
+	\caption{The geometric mean mobility diameter, $d_{m,g}$, and the geometric mobility standard deviation, $\sigma_{m,g}$ obtained using different inception models compared with the value calculated from the measured PSD~\citep{manzello2007soot}}
+	\label{tab:psrpfr_morpcomp}
+	\begin{tabular}{l|ll|ll|ll|}
+		\cline{2-7}
+		& \multicolumn{2}{c|}{$\phi=$1.9}                   & \multicolumn{2}{c|}{$\phi=$2.0} & \multicolumn{2}{c|}{$\phi=$2.1} \\ \cline{2-7} 
+		& \multicolumn{1}{l} {$d_{m,g}$  [nm]} & $\sigma_{m,g}$ & \multicolumn{1}{l} {$d_{m,g}$  [nm]} &  $\sigma_{m,g}$ & \multicolumn{1}{l}{$d_{m,g}$  [nm]} & $\sigma_{m,g}$ \\ \hline
+		\multicolumn{1}{|l|}{Data~\citep{manzello2007soot}}                      & \multicolumn{1}{l}{6.04}          &     1.25      & \multicolumn{1}{l}{12.40} &  1.49 & \multicolumn{1}{l}{17.66} & 1.64 \\ \hline
+		\multicolumn{1}{|l|}{Reactive Dimerization}     & \multicolumn{1}{l}{8.27}          &    1.14       & \multicolumn{1}{l}{11.10} & 1.21  & \multicolumn{1}{l}{16.88} & 1.58  \\ \hline
+		\multicolumn{1}{|l|}{Dimer Coalescence}         & \multicolumn{1}{l}{8.18}          &      1.14     & \multicolumn{1}{l}{10.76} & 1.24 & \multicolumn{1}{l}{16.99} & 1.68 \\ \hline
+		\multicolumn{1}{|l|}{EBridge Modified}          & \multicolumn{1}{l}{8.27}          &    1.15       & \multicolumn{1}{l}{11.02} & 1.27 & \multicolumn{1}{l}{14.56} & 1.58 \\ \hline
+		\multicolumn{1}{|l|}{Irreversible Dimerization} & \multicolumn{1}{l}{8.19}          &      1.14     & \multicolumn{1}{l}{10.96} & 1.25 & \multicolumn{1}{l}{18.44} & 1.78 \\ \hline
+	\end{tabular}
+\end{table}
 
 
 \begin{figure}[H]
